<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/header_text"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/millage_date_layout"
        app:layout_constraintEnd_toStartOf="@+id/millage_date_layout"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/millage_date_layout"
        app:srcCompat="@drawable/ic_today_black_24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/millage_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/millage_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_text"
            android:inputType="none|date"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="24dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/millage_site_layout"
        app:layout_constraintEnd_toStartOf="@+id/millage_site_layout"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/millage_site_layout"
        app:srcCompat="@drawable/mining_symbol" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/millage_site_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/millage_date_layout">

        <AutoCompleteTextView
            android:id="@+id/millage_site_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionHint="@string/site_text"
            android:hint="@string/site_text" />

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="24dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/millage_vehicle_layout"
        app:layout_constraintEnd_toStartOf="@+id/millage_vehicle_layout"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/millage_vehicle_layout"
        app:srcCompat="@drawable/ic_pickup" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/millage_vehicle_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/millage_site_layout">

        <AutoCompleteTextView
            android:id="@+id/millage_vehicle_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_text" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>