<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="utility.DateTimeUtility"/>
        <variable
            name="operatingHour"
            type="model.dailyactivity.OperatingHour"/>
    </data>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="25dp">


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/header_text"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/operating_hour_date_layout"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:srcCompat="@drawable/ic_today_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/operating_hour_date_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/operating_hour_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/date_text"
                android:inputType="none|date"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/mining_symbol" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/operating_site_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4">

            <AutoCompleteTextView
                android:id="@+id/operating_site_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_text"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="102dp" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="24dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/ic_excavator" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/operating_machine_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/operating_site_input_layout"
            app:layout_constraintStart_toStartOf="@+id/operating_site_input_layout"
            app:layout_constraintTop_toTopOf="@+id/imageView5">

            <AutoCompleteTextView
                android:id="@+id/operating_machine_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/machine_text"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="156dp" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
</layout>